2007-06-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs where avatar faces would not be removed from the screen by
	  calls to remove_npc_face intrinsic.

2007-06-21	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
    * PocketPC: Added "exult.cfg.txt" as a config file option
		Exult will look for exult.cfg.txt first (using U7exists)
		If it is not found, then Exult will use exult.cfg
		This is so PocketPC users can easily edit the config file by default
		Most PocketPC devices natively do NOT have the ability to rename extensions
			or to easily edit anything that is not already a registered type
		This feature can be made easily available to other OSes by defining
			EASY_USER_CONFIGURATION_FILE (with the value of 'exult.cfg.txt')
	* PocketPC: Possibly fixed semi-random 'minimize' bug (when minimizing, some
			of the main PocketPC GUI would be covered by graphics from Exult).
			Needs more testing.
						
2007-06-20	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
    * Fixed PocketPC 'minimize' function querks
    * Fixed PocketPC dpad keymap loading bug

2007-06-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* New intrinsic from SI discovered with rip/wud/wuc: intrinsic 0x96 is
	  'can_avatar_reach_pos'. Since Exult already offers a more powerful variant
	  ('is_dest_reachable', which works for any NPC not just the avatar), this
	  intrinsic has *not* been made available to BG.

2007-06-19	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* Started PocketPC 'minimize' function
		Needs good placement
		Minimize feature can be ran by attempting to quit the game, choosing no, then choosing yes to minimize
		There are a few querks when reactivating Exult that need to be fixed
	* Fixed type-o in ChangeLog (from Lanaca to Lanica on 2007-06-16)
	* Removed PocketPC hardcoded configuration file location (was set to load from "\Exult\exult.cfg")